# swagger.json
@@ -28,64 +28,6 @@
     "http"
   ],
   "paths": {
-    "/api/organizador": {
-      "post": {
-        "tags": [
-          "organizador"
-        ],
-        "summary": "Create organizador",
-        "description": "Rota que cria um organizador",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Created organizador object",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/Organizador"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created",
-            "schema": {
-              "$ref": "#/definitions/Organizador"
-            }
-          },
-          "400": {
-            "description": "Organizador already exists"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      },
-      "get": {
-        "tags": [
-          "organizador"
-        ],
-        "summary": "Get all organizadores",
-        "description": "Rota que retornas os organizadores",
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/Organizador"
-            }
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      }
-    },
     "/api/categoria": {
       "post": {
         "tags": [
@@ -420,32 +362,6 @@
     }
   },
   "definitions": {
-    "Organizador": {
-      "type": "object",
-      "required": [
-        "email",
-        "password",
-        "cnpj",
-        "name"
-      ],
-      "properties": {
-        "email": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        },
-        "cnpj": {
-          "type": "string"
-        },
-        "name": {
-          "type": "string"
-        }
-      },
-      "xml": {
-        "name": "Organizador"
-      }
-    },
     "Categoria": {
       "type": "object",
       "required": [
